--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ body{max-width: 100%;margin: 0;font-family: 'Roboto Condensed', sans-serif;backg
 .continuarviendo-pelicula1{flex-flow: wrap;width: 16.5%;margin-left: 1%;}
 .continuarviendo-pelicula1 img{width: 100%;}
 .progress-color{margin-left: 13%;margin-top: 5%;}
-.pelis{margin: 1%;display: inline-flex;text-align: center;width: 98%;}
-.pelis h4{color: white;font-weight: 700;font-size: 120%;margin-left: 2.5%;}
+.pelis{margin: none;display: inline-flex;text-align: center;width: 98%;}
+.pelis-titulo h4{color: white;font-weight: 700;font-size: 120%;margin-left: 2.5%;}
 .peliculas img{width: 225px;margin-left: -5px;padding: 10px;}
 .peliculas img:hover{-webkit-transform:scale(1.3);transition: all 0.6s ease;}
 
